--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
             </div>
 
             <div class="my-2 text-center mt-5">
-              <input type="submit" name="submit" value=" Next stape" class="bg-dark text-white px-5 py-2 ">
+              <input type="submit" name="submit" value=" Next step" class="bg-dark text-white px-5 py-2 ">
               <!-- <input type="reset" name="submit" value="RESET" class="bg-warning text-white px-5 py-2 mx-2 " style="text-align:center"> -->
               <a href="#" class="ml-2" style="text-decoration: none;color:black;"> Comment</a>
             </div>
